fix ipad overflow

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ emoji {font-family:'apple color emoji','segoe ui emoji','noto color emoji','andr
 }
 @media screen and (min-width:500px) {
   #overview h3 {margin-top:-150px;margin-bottom:150px;}
-  #overview h1 {font-size:55px;margin-top:40px;}
+  #overview h1 {font-size:52px;margin-top:40px;}
   #overview h1 span {font-size:38px;margin-left:30px;}
 }
 @media screen and (min-width:675px) {
